<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b">

    <Button
        android:id="@+id/Himbauan"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="233dp"
        android:layout_marginLeft="23dp"
        android:background="@color/colorAccent"
        android:text="@string/Himbauan" />
    <Button
        android:id="@+id/cuci"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="233dp"
        android:layout_marginLeft="185dp"
        android:background="@color/colorAccent"
        android:text="@string/cuci" />
    <Button
        android:id="@+id/masker"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="23dp"
        android:background="@color/colorAccent"
        android:text="@string/masker" />
    <Button
        android:id="@+id/hidup"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginTop="420dp"
        android:layout_marginLeft="185dp"
        android:background="@color/colorAccent"
        android:text="@string/hidup_sehat" />
</RelativeLayout>