<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mkr">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/satu"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="75dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/dua"
        android:layout_marginTop="260dp"
        android:layout_marginLeft="215dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:gravity="center_horizontal" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/tiga"
        android:layout_marginTop="405dp"
        android:layout_marginLeft="135dp"
        android:textAlignment="center"
        android:textSize="13sp"
        android:gravity="center_horizontal" />
</RelativeLayout>
